# lattice-registry

./: CLAUDE_SELF.md  Cargo.toml  README.md
scripts/: lattice-cco-ingest.sh  lattice-seed.sh
src/: catalog.rs  commands.rs  error.rs  fetcher.rs  main.rs  owl_analysis.rs  registry.rs
