[package]
name = "lattice-registry"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Local catalog of BFO-grounded ontologies for the ethical lattice"
license = "MIT"

[[bin]]
name = "lattice-registry"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "native-tls"] }
horned-owl = { version = "0.15.0-alpha" }
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
